--- a/Capstone02/Views/Employees/Details.cshtml
+++ b/Capstone02/Views/Employees/Details.cshtml
@@ -4,12 +4,24 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>PTA Officer's</h1>
+<h1>Details</h1>
 
 <div>
-    <h4>Informations</h4>
+    <h4>Employee</h4>
     <hr />
     <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.FirstName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.LastName)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Type)
         </dt>
@@ -23,10 +35,34 @@
             @Html.DisplayFor(model => model.Position)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Person)
+            @Html.DisplayNameFor(model => model.Age)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Person.Id)
+            @Html.DisplayFor(model => model.Age)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Gender)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Gender)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Address)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.EmailAddress)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.EmailAddress)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.ContactNumber)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.ContactNumber)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.School)
@@ -37,6 +73,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index"class="btn btn-primary" >Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
