--- a/Capstone02/Views/Home/Index.cshtml
+++ b/Capstone02/Views/Home/Index.cshtml
@@ -1,8 +1,33 @@
 ﻿@{
-    ViewData["Title"] = Layout = "~/Views/Shared/_Layout.cshtml"; 
+    ViewData["Title"] = "PTA Fee";
+    Layout = "~/Views/Shared/_Layout.cshtml"; 
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="row justify-content-center">
+	<div class="col-5 mt-5">
+		<div class="card login-logout-card">
+			<div class="card-header">
+				<ul class="nav nav-tabs card-header-tabs">
+					<li class="nav-item">
+						<a class="nav-link" href="/Identity/Account/Login">
+							Log In
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/Identity/Account/Register">
+							Register
+						</a>
+					</li>
+				</ul>
+			</div>
+			<div class="card-nody">
+				<div class="row justify-content-center">
+					<div class="col-10 mt-4">
+						
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
+
