--- a/Capstone02/Views/PTAFees/Edit.cshtml
+++ b/Capstone02/Views/PTAFees/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Update/Edit</h1>
+<h1>Edit</h1>
 
-<h4>PTAFee Information</h4>
+<h4>PTAFee</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,40 +24,14 @@
                 <span asp-validation-for="Amount" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SchoolYear" class="control-label"></label>
-                <input asp-for="SchoolYear" class="form-control" />
-                <span asp-validation-for="SchoolYear" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ReferenceNumber" class="control-label"></label>
-                <input asp-for="ReferenceNumber" class="form-control" />
-                <span asp-validation-for="ReferenceNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="EmployeeId" class="control-label"></label>
-                <select asp-for="EmployeeId" class="form-control" asp-items="ViewBag.EmployeeId"></select>
-                <span asp-validation-for="EmployeeId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="StudentId" class="control-label"></label>
-                <select asp-for="StudentId" class="form-control" asp-items="ViewBag.StudentId"></select>
-                <span asp-validation-for="StudentId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" /> |
-                <a asp-action="Index" class="btn btn-primary">Back to List</a>
-
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
