--- a/Capstone02/Views/Parents/Index.cshtml
+++ b/Capstone02/Views/Parents/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>List of Parents</h1>
+<h1>Parent</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New</a>
@@ -13,10 +13,13 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ChildName)
+                @Html.DisplayNameFor(model => model.ParentName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Person)
+                @Html.DisplayNameFor(model => model.ContactNumber)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Student)
             </th>
             <th></th>
         </tr>
@@ -25,14 +28,17 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.ChildName)
+                @Html.DisplayFor(modelItem => item.ParentName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Person.FirstName)
+                @Html.DisplayFor(modelItem => item.ContactNumber)
             </td>
             <td>
-                <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a> 
-                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a> 
+                @Html.DisplayFor(modelItem => item.Student.FirstName)
+            </td>
+            <td>
+                    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a> |
                     <a asp-action="Delete" class="btn btn-primary" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
