--- a/Capstone02/Views/Schools/Create.cshtml
+++ b/Capstone02/Views/Schools/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Add New</h1>
+<h1>Create</h1>
 
 <h4>School</h4>
 <hr />
@@ -23,16 +23,14 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" /> |
+                <input type="submit" value="Create" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-primary">Back to List</a>
-
             </div>
         </form>
     </div>
 </div>
 
-<div>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
