--- a/Capstone02/Views/Schools/Details.cshtml
+++ b/Capstone02/Views/Schools/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>School's</h1>
+<h1>Details</h1>
 
 <div>
-    <h4>Information</h4>
+    <h4>School</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="btn btn-primary"asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index" class="btn btn-primary">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
