--- a/Capstone02/Views/Schools/Edit.cshtml
+++ b/Capstone02/Views/Schools/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Update/Edit</h1>
+<h1>Edit</h1>
 
 <h4>School</h4>
 <hr />
@@ -24,15 +24,14 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" /> |
-                <a asp-action="Index" class="btn btn-primary">Back to List</a>
-
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
