--- a/Capstone02/Views/Schools/Index.cshtml
+++ b/Capstone02/Views/Schools/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>List of School</h1>
+<h1>School</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New</a>
@@ -31,8 +31,8 @@
                 @Html.DisplayFor(modelItem => item.Address)
             </td>
             <td>
-                    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a> 
-                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a> 
+                    <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a> |
                     <a asp-action="Delete" class="btn btn-primary" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
