--- a/Capstone02/Views/Transactions/Delete.cshtml
+++ b/Capstone02/Views/Transactions/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Capstone02.Models.Parent
+﻿@model Capstone02.Models.Transaction
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,26 +8,32 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Parent</h4>
+    <h4>Transaction</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ParentName)
+            @Html.DisplayNameFor(model => model.TransactionDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ParentName)
+            @Html.DisplayFor(model => model.TransactionDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ContactNumber)
+            @Html.DisplayNameFor(model => model.Employee)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ContactNumber)
+            @Html.DisplayFor(model => model.Employee.Id)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Student)
+            @Html.DisplayNameFor(model => model.Parent)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Student.Id)
+            @Html.DisplayFor(model => model.Parent.Id)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PTAFee)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PTAFee.Id)
         </dd>
     </dl>
     
