--- a/Capstone02/Views/Transactions/Index.cshtml
+++ b/Capstone02/Views/Transactions/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Capstone02.Models.PTAFee>
+﻿@model IEnumerable<Capstone02.Models.Transaction>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Fees</h1>
+<h1>Transactions</h1>
 
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New</a>
@@ -13,10 +13,16 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Type)
+                @Html.DisplayNameFor(model => model.TransactionDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Amount)
+                @Html.DisplayNameFor(model => model.Employee)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Parent)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PTAFee)
             </th>
             <th></th>
         </tr>
@@ -25,10 +31,16 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Type)
+                @Html.DisplayFor(modelItem => item.TransactionDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Amount)
+                @Html.DisplayFor(modelItem => item.Employee.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Parent.ParentName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PTAFee.Type)
             </td>
             <td>
                     <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a> |
