--- a/Capstone02/Views/Transactions/Create.cshtml
+++ b/Capstone02/Views/Transactions/Create.cshtml
@@ -18,15 +18,15 @@
                 <span asp-validation-for="TransactionDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EmployeeId" class="control-label"></label>
+                <label asp-for="EmployeeId" class="control-label">Employee Name</label>
                 <select asp-for="EmployeeId" class ="form-control" asp-items="ViewBag.EmployeeId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ParentId" class="control-label"></label>
+                <label asp-for="ParentId" class="control-label">Parent Name</label>
                 <select asp-for="ParentId" class ="form-control" asp-items="ViewBag.ParentId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="PTAFeeId" class="control-label"></label>
+                <label asp-for="PTAFeeId" class="control-label">Fee Type</label>
                 <select asp-for="PTAFeeId" class ="form-control" asp-items="ViewBag.PTAFeeId"></select>
             </div>
             <div class="form-group">
