--- a/Capstone02/Views/Employees/Create.cshtml
+++ b/Capstone02/Views/Employees/Create.cshtml
@@ -58,7 +58,7 @@
                 <span asp-validation-for="ContactNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SchoolId" class="control-label"></label>
+                <label asp-for="SchoolId" class="control-label">School Name</label>
                 <select asp-for="SchoolId" class ="form-control" asp-items="ViewBag.SchoolId"></select>
             </div>
             <div class="form-group">
