--- a/Capstone02/Views/Employees/Delete.cshtml
+++ b/Capstone02/Views/Employees/Delete.cshtml
@@ -69,13 +69,13 @@
             @Html.DisplayNameFor(model => model.School)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.School.Id)
+            @Html.DisplayFor(model => model.School.Name)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-primary">Back to List</a>
     </form>
 </div>
