--- a/Capstone02/Views/Employees/Details.cshtml
+++ b/Capstone02/Views/Employees/Details.cshtml
@@ -68,11 +68,11 @@
             @Html.DisplayNameFor(model => model.School)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.School.Id)
+            @Html.DisplayFor(model => model.School.Name)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" class="btn btn-primary"asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Index" class="btn btn-primary">Back to List</a>
 </div>
