--- a/Capstone02/Views/Transactions/Delete.cshtml
+++ b/Capstone02/Views/Transactions/Delete.cshtml
@@ -21,25 +21,25 @@
             @Html.DisplayNameFor(model => model.Employee)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Employee.Id)
+            @Html.DisplayFor(model => model.Employee.FirstName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Parent)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Parent.Id)
+            @Html.DisplayFor(model => model.Parent.ParentName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PTAFee)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PTAFee.Id)
+            @Html.DisplayFor(model => model.PTAFee.Type)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index" class="btn btn-primary">Back to List</a>
     </form>
 </div>
