--- a/Capstone02/Views/Transactions/Details.cshtml
+++ b/Capstone02/Views/Transactions/Details.cshtml
@@ -20,23 +20,23 @@
             @Html.DisplayNameFor(model => model.Employee)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Employee.Id)
+            @Html.DisplayFor(model => model.Employee.FirstName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Parent)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Parent.Id)
+            @Html.DisplayFor(model => model.Parent.ParentName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PTAFee)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PTAFee.Id)
+            @Html.DisplayFor(model => model.PTAFee.Type)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" class="btn btn-primary"asp-route-id="@Model?.Id">Edit</a> |
+    <a asp-action="Index" class="btn btn-primary">Back to List</a>
 </div>
