--- a/Capstone02/Views/Transactions/Edit.cshtml
+++ b/Capstone02/Views/Transactions/Edit.cshtml
@@ -19,30 +19,30 @@
                 <span asp-validation-for="TransactionDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EmployeeId" class="control-label"></label>
+                <label asp-for="EmployeeId" class="control-label">Employee Name</label>
                 <select asp-for="EmployeeId" class="form-control" asp-items="ViewBag.EmployeeId"></select>
                 <span asp-validation-for="EmployeeId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ParentId" class="control-label"></label>
+                <label asp-for="ParentId" class="control-label">Parent Name</label>
                 <select asp-for="ParentId" class="form-control" asp-items="ViewBag.ParentId"></select>
                 <span asp-validation-for="ParentId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PTAFeeId" class="control-label"></label>
+                <label asp-for="PTAFeeId" class="control-label">Fee Type</label>
                 <select asp-for="PTAFeeId" class="form-control" asp-items="ViewBag.PTAFeeId"></select>
                 <span asp-validation-for="PTAFeeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-primary">Back to List</a>
+
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
