--- a/Capstone02/Views/Shared/_LoginPartial.cshtml
+++ b/Capstone02/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
 
             <li class="nav-item">
                 <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                    <button id="logout" type="submit" class="nav-link btn btn-link text-white border-0">Logout</button>
+                <button id="logout" type="submit" class="nav-link btn btn-link text-white border-0"><i class='bx bx-log-out'></i> Logout</button>
                 </form>
             </li>
         }
