Revert "Ojiee sidebar moo"
This reverts commit a302b971267734d0c1c4b7c3e5ae24e0d168325d.

--- a/Capstone02/Views/Shared/_Layout.cshtml
+++ b/Capstone02/Views/Shared/_Layout.cshtml
@@ -17,7 +17,9 @@
     @if (SignInManager.IsSignedIn(User)) 
     {
     <button id="sidebarToggle" class="btn btn-dark">
-        <i class='bx'></i>
+        <i class='bx'>
+
+        </i>
     </button>
 
     
