Labels on all entities inside the "Views" folder.

--- a/Capstone02/Views/PTAFees/Index.cshtml
+++ b/Capstone02/Views/PTAFees/Index.cshtml
@@ -13,10 +13,12 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Type)
+                Type
+                @*@Html.DisplayNameFor(model => model.Type)*@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Amount)
+                Amount
+                @*@Html.DisplayNameFor(model => model.Amount)*@
             </th>
             <th></th>
         </tr>
