--- a/Capstone02/Views/Schools/Index.cshtml
+++ b/Capstone02/Views/Schools/Index.cshtml
@@ -13,10 +13,12 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                School
+                @*@Html.DisplayNameFor(model => model.Name)*@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Address)
+                School Address
+                @*@Html.DisplayNameFor(model => model.Address)*@
             </th>
             <th></th>
         </tr>
