--- a/Capstone02/Views/Employees/Details.cshtml
+++ b/Capstone02/Views/Employees/Details.cshtml
@@ -11,61 +11,71 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
+            First Name
+            @*@Html.DisplayNameFor(model => model.FirstName)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
+            Last Name
+            @*@Html.DisplayNameFor(model => model.LastName)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Type)
+            Type
+            @*@Html.DisplayNameFor(model => model.Type)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Type)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Position)
+            Position
+            @*@Html.DisplayNameFor(model => model.Position)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Position)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Age)
+            Age
+            @*@Html.DisplayNameFor(model => model.Age)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Age)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Gender)
+            Gender
+            @*@Html.DisplayNameFor(model => model.Gender)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Gender)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
+            Home Address
+            @*@Html.DisplayNameFor(model => model.Address)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Address)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EmailAddress)
+            E-mail Address
+            @*@Html.DisplayNameFor(model => model.EmailAddress)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.EmailAddress)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ContactNumber)
+            Contact Number
+            @*@Html.DisplayNameFor(model => model.ContactNumber)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ContactNumber)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.School)
+            School
+            @*@Html.DisplayNameFor(model => model.School)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.School.Name)
