--- a/Capstone02/Views/Employees/Edit.cshtml
+++ b/Capstone02/Views/Employees/Edit.cshtml
@@ -14,52 +14,62 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
+                First Name
+				@*<label asp-for="FirstName" class="control-label"></label>*@
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
+                Last Name
+				@*<label asp-for="LastName" class="control-label"></label>*@
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
+                Type
+				@*<label asp-for="Type" class="control-label"></label>*@
                 <input asp-for="Type" class="form-control" />
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Position" class="control-label"></label>
+                Position
+				@*<label asp-for="Position" class="control-label"></label>*@
                 <input asp-for="Position" class="form-control" />
                 <span asp-validation-for="Position" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Age" class="control-label"></label>
+                Age
+				@*<label asp-for="Age" class="control-label"></label>*@
                 <input asp-for="Age" class="form-control" />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Gender" class="control-label"></label>
+                Gender
+				@*<label asp-for="Gender" class="control-label"></label>*@
                 <input asp-for="Gender" class="form-control" />
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
+                Home Address
+				@*<label asp-for="Address" class="control-label"></label>*@
                 <input asp-for="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EmailAddress" class="control-label"></label>
+                E-mail Address
+				@*<label asp-for="EmailAddress" class="control-label"></label>*@
                 <input asp-for="EmailAddress" class="form-control" />
                 <span asp-validation-for="EmailAddress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ContactNumber" class="control-label"></label>
+                Contact Number
+				@*<label asp-for="ContactNumber" class="control-label"></label>*@
                 <input asp-for="ContactNumber" class="form-control" />
                 <span asp-validation-for="ContactNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="SchoolId" class="control-label">School Name</label>
+                School
+				@*<label asp-for="SchoolId" class="control-label">School Name</label>*@
                 <select asp-for="SchoolId" class="form-control" asp-items="ViewBag.SchoolId"></select>
                 <span asp-validation-for="SchoolId" class="text-danger"></span>
             </div>
