--- a/Capstone02/Views/Employees/Index.cshtml
+++ b/Capstone02/Views/Employees/Index.cshtml
@@ -13,34 +13,20 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                First Name
+                @* @Html.DisplayNameFor(model => model.FirstName) *@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                Last Name
+                @* @Html.DisplayNameFor(model => model.LastName) *@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Type)
+                Type
+                @* @Html.DisplayNameFor(model => model.Type) *@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Position)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Age)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Gender)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EmailAddress)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ContactNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.School)
+                Position
+                @* @Html.DisplayNameFor(model => model.Position) *@
             </th>
             <th></th>
         </tr>
@@ -59,24 +45,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Position)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Age)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Gender)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EmailAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ContactNumber)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.School.Name)
             </td>
             <td>
                 <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a>
