--- a/Capstone02/Views/PTAFees/Details.cshtml
+++ b/Capstone02/Views/PTAFees/Details.cshtml
@@ -11,13 +11,15 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Type)
+            Type
+            @*@Html.DisplayNameFor(model => model.Type)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Type)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Amount)
+            Amount
+            @*@Html.DisplayNameFor(model => model.Amount)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Amount)
