--- a/Capstone02/Views/PTAFees/Edit.cshtml
+++ b/Capstone02/Views/PTAFees/Edit.cshtml
@@ -14,12 +14,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
+                Type
+				@*<label asp-for="Type" class="control-label"></label>*@
                 <input asp-for="Type" class="form-control" />
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Amount" class="control-label"></label>
+                Amount
+				@*<label asp-for="Amount" class="control-label"></label>*@
                 <input asp-for="Amount" class="form-control" />
                 <span asp-validation-for="Amount" class="text-danger"></span>
             </div>
