--- a/Capstone02/Views/Parents/Details.cshtml
+++ b/Capstone02/Views/Parents/Details.cshtml
@@ -11,19 +11,22 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ParentName)
+            Parent's Name
+            @*@Html.DisplayNameFor(model => model.ParentName)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ParentName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ContactNumber)
+            Contact Number
+            @*@Html.DisplayNameFor(model => model.ContactNumber)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ContactNumber)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Student)
+            Child
+            @*@Html.DisplayNameFor(model => model.Student)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Student.FirstName)
