--- a/Capstone02/Views/Parents/Index.cshtml
+++ b/Capstone02/Views/Parents/Index.cshtml
@@ -13,13 +13,12 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ParentName)
+                Parent's Name
+                @*@Html.DisplayNameFor(model => model.ParentName)*@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ContactNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Student)
+                Child
+                @*@Html.DisplayNameFor(model => model.Student)*@
             </th>
             <th></th>
         </tr>
@@ -31,11 +30,10 @@
                 @Html.DisplayFor(modelItem => item.ParentName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ContactNumber)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Student.FirstName)
+                @Html.DisplayFor(modelItem => item.Student.LastName)
             </td>
+
             <td>
                     <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a> |
