--- a/Capstone02/Views/Schools/Details.cshtml
+++ b/Capstone02/Views/Schools/Details.cshtml
@@ -11,13 +11,15 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            School
+            @*@Html.DisplayNameFor(model => model.Name)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
+            School Address
+            @*@Html.DisplayNameFor(model => model.Address)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Address)
