--- a/Capstone02/Views/Students/Delete.cshtml
+++ b/Capstone02/Views/Students/Delete.cshtml
@@ -12,55 +12,64 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
+            First Name
+            @*@Html.DisplayNameFor(model => model.FirstName)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.FirstName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
+            Last Name
+            @*@Html.DisplayNameFor(model => model.LastName)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.LastName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Age)
+            Age
+            @*@Html.DisplayNameFor(model => model.Age)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Age)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Gender)
+            Gender
+            @*@Html.DisplayNameFor(model => model.Gender)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Gender)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Address)
+            Home Address
+            @*@Html.DisplayNameFor(model => model.Address)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Address)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EmailAddress)
+            E-mail Address
+            @*@Html.DisplayNameFor(model => model.EmailAddress)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.EmailAddress)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ContactNumber)
+            Contact Number
+            @*@Html.DisplayNameFor(model => model.ContactNumber)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ContactNumber)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Section)
+            Section
+            @*@Html.DisplayNameFor(model => model.Section)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Section)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Year)
+            Year Level
+            @*@Html.DisplayNameFor(model => model.Year)*@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Year)
