--- a/Capstone02/Views/Students/Edit.cshtml
+++ b/Capstone02/Views/Students/Edit.cshtml
@@ -14,47 +14,56 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
+                First Name
+				@*<label asp-for="FirstName" class="control-label"></label>*@
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
+                Last Name
+				@*<label asp-for="LastName" class="control-label"></label>*@
                 <input asp-for="LastName" class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Age" class="control-label"></label>
+                Age
+				@*<label asp-for="Age" class="control-label"></label>*@
                 <input asp-for="Age" class="form-control" />
                 <span asp-validation-for="Age" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Gender" class="control-label"></label>
+                Gender
+				@*<label asp-for="Gender" class="control-label"></label>*@
                 <input asp-for="Gender" class="form-control" />
                 <span asp-validation-for="Gender" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Address" class="control-label"></label>
+                Home Address
+				@*<label asp-for="Address" class="control-label"></label>*@
                 <input asp-for="Address" class="form-control" />
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EmailAddress" class="control-label"></label>
+                E-mail Address
+				@*<label asp-for="EmailAddress" class="control-label"></label>*@
                 <input asp-for="EmailAddress" class="form-control" />
                 <span asp-validation-for="EmailAddress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ContactNumber" class="control-label"></label>
+                Contact Number
+				@*<label asp-for="ContactNumber" class="control-label"></label>*@
                 <input asp-for="ContactNumber" class="form-control" />
                 <span asp-validation-for="ContactNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Section" class="control-label"></label>
+                Section
+				@*<label asp-for="Section" class="control-label"></label>*@
                 <input asp-for="Section" class="form-control" />
                 <span asp-validation-for="Section" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Year" class="control-label"></label>
+                Year Level
+				@*<label asp-for="Year" class="control-label"></label>*@
                 <input asp-for="Year" class="form-control" />
                 <span asp-validation-for="Year" class="text-danger"></span>
             </div>
