--- a/Capstone02/Views/Students/Index.cshtml
+++ b/Capstone02/Views/Students/Index.cshtml
@@ -13,32 +13,22 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                First Name
+                @*@Html.DisplayNameFor(model => model.FirstName)*@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
+                Last Name
+                @*@Html.DisplayNameFor(model => model.LastName)*@
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Age)
+			<th>
+				Year Level
+				@*@Html.DisplayNameFor(model => model.Year)*@
+			</th>
+			<th>
+                Section
+                @*@Html.DisplayNameFor(model => model.Section)*@
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Gender)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.EmailAddress)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ContactNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Section)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Year)
-            </th>
+            
             <th></th>
         </tr>
     </thead>
@@ -52,26 +42,12 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Age)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Gender)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EmailAddress)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ContactNumber)
+                @Html.DisplayFor(modelItem => item.Year)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Section)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Year)
-            </td>
+            
             <td>
                     <a asp-action="Edit" class="btn btn-primary" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.Id">Details</a> |
